cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED)
find_package(Boost 1.66 REQUIRED COMPONENTS program_options)
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_write_test pcd_write.cpp)
add_executable(greedy_projection greedy_projection.cpp)
target_link_libraries(pcd_write_test ${PCL_LIBRARIES})
target_link_libraries(greedy_projection ${PCL_LIBRARIES} ${Boost_LIBRARIES})

