cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED)
find_package(Boost 1.66 REQUIRED COMPONENTS program_options)
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(greedy_projection greedy_projection.cpp)
# add_executable(bspline_fitting bspline_fitting.cpp)
add_executable(cloud_viewer cloud_viewer.cpp)
add_executable(pcl_visualizer_demo pcl_visualizer_demo.cpp)
target_link_libraries(greedy_projection ${PCL_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(cloud_viewer ${PCL_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(pcl_visualizer_demo ${PCL_LIBRARIES} ${Boost_LIBRARIES})
# target_link_libraries(bspline_fitting ${PCL_LIBRARIES} ${Boost_LIBRARIES})


